--- a/CódigoFuente/BitacorasProduccion/Views/RM_cabecera/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/RM_cabecera/Index.cshtml
@@ -187,17 +187,55 @@
                                         @foreach (var item in Model)
                                         {
                                             <tr>
-                                                <td>
+                                                <td nowrap>
+
                                                     @if (User.IsInRole(TipoRoles.RM_CREACION))
                                                     {
-                                                        <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.clave })" class="btn btn-success btn-sm" title="Editar">
-                                                            <i class="fa-regular fa-pen-to-square"></i>
+
+                                                        if (
+                                                            item.ultimoEstatus == (int)Bitacoras.Util.RM_estatus_enum.Creada
+                                                            || item.ultimoEstatus == (int)Bitacoras.Util.RM_estatus_enum.Editada
+                                                            || item.ultimoEstatus == (int)Bitacoras.Util.RM_estatus_enum.Aprobada
+                                                            || item.ultimoEstatus == (int)Bitacoras.Util.RM_estatus_enum.Impresa
+                                                            )
+                                                        {
+                                                            <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.clave, tipo_edit=(int)Bitacoras.Util.RM_estatus_enum.Editada })" class="btn btn-success btn-sm" data-toggle="tooltip" data-placement="top" title="Editar">
+                                                                <i class="fa-regular fa-pen-to-square"></i>
+                                                            </a>
+                                                            <a href="@Url.Action("Cancel", ViewBag.ControllerName, new { id = item.clave })" class="btn btn-danger btn-sm" data-toggle="tooltip" data-placement="top" title="Cancelar">
+                                                                <i class="fa-regular fa-circle-xmark"></i>
+                                                            </a>
+                                                        }
+                                                    }
+                                                    @if (User.IsInRole(TipoRoles.RM_APROBAR)
+                                                        && (item.ultimoEstatus == (int)Bitacoras.Util.RM_estatus_enum.Editada
+                                                            || item.ultimoEstatus == (int)Bitacoras.Util.RM_estatus_enum.Creada))
+                                                    {
+                                                        <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.clave, tipo_edit=(int)Bitacoras.Util.RM_estatus_enum.Aprobada })" class="btn btn-info btn-sm" style="background-color:green" data-toggle="tooltip" data-placement="top" title="Aprobar">
+                                                            <i class="fa-solid fa-check-to-slot"></i>
+                                                        </a>
+                                                    }
+
+                                                    @if (User.IsInRole(TipoRoles.RM_REGULARIZAR) &&
+                                                        item.ultimoEstatus == (int)Bitacoras.Util.RM_estatus_enum.Aprobada)
+                                                    {
+                                                        <a href="@Url.Action("Regularizar", ViewBag.ControllerName, new { id = item.clave })" class="btn btn-primary btn-sm" data-toggle="tooltip" data-placement="top" title="Regularizar">
+                                                            <i class="fa-solid fa-computer"></i>
                                                         </a>
                                                     }
                                                     @if (User.IsInRole(TipoRoles.RM_CREACION) || User.IsInRole(TipoRoles.RM_DETALLES))
                                                     {
-                                                        <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.clave })" class="btn btn-info btn-sm" title="Detalles">
-                                                            <i class="fa fa-info-circle"></i>
+                                                        if (
+                                                          item.ultimoEstatus == (int)Bitacoras.Util.RM_estatus_enum.Aprobada
+                                                          || item.ultimoEstatus == (int)Bitacoras.Util.RM_estatus_enum.Regulariza
+                                                          )
+                                                        {
+                                                            <a onclick="imprimir(@item.clave)" class="btn btn-success btn-sm" style="background-color:#808080; color:white;" data-toggle="tooltip" data-placement="top" title="Imprimir">
+                                                                <i class="fa-solid fa-print"></i>
+                                                            </a>
+                                                        }
+                                                        <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.clave })" class="btn btn-info btn-sm" data-toggle="tooltip" data-placement="top" title="Detalles">
+                                                            <i class="fa-solid fa-circle-info"></i>
                                                         </a>
                                                     }
 
@@ -347,10 +385,13 @@
                     clearTimeout(timeout)
                 }, 2500)
             })
-
-
             $.unblockUI();
         });
+
+        function imprimir(id) {
+            //window.open('/@ViewBag.ControllerName/print/' + id, 'popup', 'width=600,height=600');
+            popupCenter({ url: '/@ViewBag.ControllerName/print/' + id, title: 'Imprimir Remisión', w: screen.width * .70, h: screen.height * .70 });
+        }
 
         function EnviaBusqueda() {
             $("#buscarForm").submit();
