--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -665,7 +665,7 @@
                                                 }
                                                 @if (User.IsInRole(TipoRoles.RM_REPORTES))
                                                 {
-                                                    <li class="@(ViewBag.SegundoNivel == "reportes_remisiones" ? "current-page" : null )"><a href="@Url.Action( "Reportes", "RM_cabecera")">Reportes</a></li>
+                                                    @*<li class="@(ViewBag.SegundoNivel == "reportes_remisiones" ? "current-page" : null )"><a href="@Url.Action( "Reportes", "RM_cabecera")">Reportes</a></li>*@
                                                 }
 
                                             </ul>
