2023-05-12 Se agrega manual de usuario a RM.

--- a/CódigoFuente/BitacorasProduccion/Views/RM_cabecera/Regularizar.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/RM_cabecera/Regularizar.cshtml
@@ -365,7 +365,7 @@
                                                         </td>
                                                         <td style="background: #cef7cd;">
                                                             <input style=" font-size: 12px;" type="text" name="RM_elemento[@contador].remisionSap" id="RM_elemento[@contador].remisionSap" class="form-control col-md-12 sap" value="@item.remisionSap" autocomplete="off" required>
-                                                            <span class="field-validation-valid text-danger" data-valmsg-for="RM_elemento[@contador].peso" data-valmsg-replace="true"></span>
+                                                            <span class="field-validation-valid text-danger" data-valmsg-for="RM_elemento[@contador].remisionSap" data-valmsg-replace="true"></span>
                                                         </td>
 
                                                     </tr>
