2023-05-23 Se agrega menú de desarrollos.

--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -838,8 +838,8 @@
                     <div class="sidebar-footer hidden-small">
                         <a data-toggle="tooltip" data-placement="top" title="Mi usuario" href="@Url.Action( "Index", "Manage")">
                             <span class="glyphicon glyphicon-user" style="color:lightgray" aria-hidden="true"></span>
-                        </a> <a data-toggle="tooltip" data-placement="top" title="Próximamente">
-                            <span class="glyphicon glyphicon-info-sign" style="color:lightgray" aria-hidden="true"></span>
+                        </a> <a data-toggle="tooltip" data-placement="top" title="Menú" href="@Url.Action( "Menu", "Home")">
+                            <span class="glyphicon glyphicon-list-alt" style="color:lightgray" aria-hidden="true"></span>
                         </a>
                         <a data-toggle="tooltip" data-placement="top" title="Próximamente">
                             <span class="glyphicon glyphicon-time" style="color:lightgray" aria-hidden="true"></span>
