--- a/CódigoFuente/BitacorasProduccion/Views/Account/Login.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Account/Login.cshtml
@@ -70,7 +70,7 @@
                                 @Html.LabelFor(m => m.Email)
                                 <div class="input-group">
                                     <div class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></div>
-                                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Email", @tabindex = "1" })
+                                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Usuario o correo electrónico", @tabindex = "1" })
                                 </div>
                                 @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                             </div>
